# template--python-library

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: build.yml
{{cookiecutter.project_name}}/docs/: api.md  index.md
{{cookiecutter.project_name}}/test/unit/{{cookiecutter.module_name}}/: some_test.py
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: some_class.py
